refactor: improve security filter logic, implement dynamic admin seeding and enhance test stability