@@ -1,5 +1,6 @@
 package io.docflow.api.infrastructure.security;
 
+import io.docflow.api.core.client.entity.ApiClient;
 import io.docflow.api.core.client.repository.ApiClientRepository;
 import io.docflow.api.infrastructure.util.HashUtils;
 import jakarta.servlet.FilterChain;
@@ -8,12 +9,16 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 @Component
 @RequiredArgsConstructor
@@ -22,16 +27,18 @@ public class ApiKeyAuthenticationFilter extends OncePerRequestFilter {
     private final ApiClientRepository apiClientRepository;
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
-        String path = request.getServletPath();
+        String apiKey = request.getHeader("X-API-KEY");
 
-        if (!path.startsWith("/api/v1/documents")) {
-            String apiKey = request.getHeader("X-API-KEY");
-            if (apiKey != null) {
-                String hashedKey = HashUtils.sha256(apiKey);
-                apiClientRepository.findByApiKeyHash(hashedKey).ifPresent(client -> {
-                    var auth = new UsernamePasswordAuthenticationToken(client, null, Collections.emptyList());
-                    SecurityContextHolder.getContext().setAuthentication(auth);
-                });
+        if (apiKey != null) {
+            String hashedKey = HashUtils.sha256(apiKey);
+
+            var clientOptional = apiClientRepository.findByApiKeyHash(hashedKey);
+
+            if (clientOptional.isPresent()) {
+                var client = clientOptional.get();
+                var authorities = List.of(new SimpleGrantedAuthority("ROLE_CLIENT"));
+                var auth = new UsernamePasswordAuthenticationToken(client, null, authorities);
+                SecurityContextHolder.getContext().setAuthentication(auth);
             }
         }
 
